# jace

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  heartbeat.example.md  inventory.example.yaml  pyproject.toml
jace/: __init__.py  __main__.py  app.py
jace/agent/: __init__.py  accumulator.py  anomaly.py  context.py  core.py  findings.py  heartbeat.py  memory.py  metrics_store.py  scheduler.py  watch.py
jace/api/: server.py
jace/checks/: __init__.py  chassis.py  config_audit.py  interfaces.py  registry.py  routing.py  system.py
jace/config/: __init__.py  settings.py
jace/device/: __init__.py  base.py  manager.py  models.py  netmiko_driver.py  pyez_driver.py
jace/llm/: __init__.py  anthropic.py  base.py  factory.py  logging.py  openai_compat.py  tools.py
jace/mcp/: manager.py  server.py
jace/metrics/: __init__.py  base.py  chassis.py  interfaces.py  routing.py  system.py
jace/ui/: log_panel.py  logging_handler.py  notifications.py  shell.py  tui.py  widgets.py
tests/: conftest.py
tests/test_agent/: test_accumulator.py  test_compaction.py  test_context.py  test_core.py  test_findings.py  test_heartbeat.py  test_memory.py  test_metrics_store.py  test_profiling.py  test_shell.py  test_watch.py
tests/test_checks/: test_registry.py
tests/test_config/: test_inventory.py
tests/test_device/: test_manager.py  test_models.py
tests/test_llm/: test_base.py  test_factory.py  test_logging.py  test_tools.py
tests/test_mcp/: test_manager.py  test_server.py
tests/test_metrics/: test_extractors.py
(+1 files in other folders)
