[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jace"
version = "0.1.0"
description = "JACE: Autonomous Control Engine for network device monitoring and troubleshooting"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "junos-eznc>=2.7",
    "netmiko>=4.4",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "pydantic>=2.9",
    "httpx>=0.27",
    "mcp>=1.0",
    "textual>=0.85",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[project.scripts]
jace = "jace.__main__:main"
jace-mcp = "jace.mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
